--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
-    <title>Bugs Academy</title>
+    <title>bugs_academy</title>
   </head>
 
   <body>
     <header>
       <div class="header">
         <img src="./resourses/images/logo.png" alt="Bug logo">
-        <h1>Bugs Academy</h1>
+        <h1>bugs_academy</h1>
       </div>
       <nav>
         <div class="nav">
-            <p><a href="#mission">Mission</a></p>
-            <p><a href="#courses">Courses</a></p>
-            <p><a href="#video">Video tutorials</a></p>
-            <p><a href="#contacts">Contacts</a></p>
+            <p><a href="#mission">mission</a></p>
+            <p><a href="#courses">courses</a></p>
+            <p><a href="#video">video_tutorials</a></p>
+            <p><a href="#contacts">contacts</a></p>
         </div>
       </nav>
     </header>
@@ -29,47 +29,47 @@
       <section id="mission">
         <div class="mission">
           <div class="mission-txt">
-            <h2>Be stacked, love your bugs!</h2>
-          <h4>Hi all <a href="https://stackoverflow.com/" target="_blank">Stackowerflow's</a> friends! Our mission is making you stacked more and more day by day! Be part of us!</h4>
+            <h2>be_stacked_love_your_bugs!</h2>
+          <h4>hi all <a href="https://stackoverflow.com/" target="_blank">stackowerflow's</a> friends! our mission is making you stacked more and more day by day! Be part of us!</h4>
           </div>
         </div>
       </section>
       <section id="courses">
-        <h2>Our courses</h2>
+        <h2>our_courses</h2>
         <div class="courses-box">
           <div class="courses">
-            <h3>Chat in terminal</h3>
+            <h3>chat in terminal</h3>
             <img src="./resourses/images/chat.jpg" alt="Chating in terminal">
           </div>
           <div class="courses">
-            <h3>How to center a div</h3>
+            <h3>how to center a div</h3>
             <img src="./resourses/images/div.jpg" alt="How to center a div">
           </div>
           <div class="courses">
-            <h3>How to enter Vim</h3>
+            <h3>how to enter vim</h3>
             <img src="./resourses/images/vim.jpg" alt="Vim">
           </div>
           <div class="courses">
-            <h3>Try to escape or enter</h3>
+            <h3>try to escape or enter</h3>
             <img src="./resourses/images/enter.jpg" alt="Escape & Enter">
           </div>
         </div>
       </section>
       <section id="video">
-        <h2>Video Tutorials</h2>
+        <h2>video_tutorials</h2>
         <div class="media-box">
           <div class="media">
-            <h3>HTML & CSS</h3>
+            <h3>html & css quick guide</h3>
             <video src="./resourses/videos/html.mp4" controls>
               Video not supported</video>
           </div>
           <div class="media">
-            <h3>Vim tutorial</h3>
+            <h3>vim tutorial</h3>
             <video src="./resourses/videos/vim.mp4" controls>
               Video not supported</video>
           </div>
           <div class="media">
-            <h3>Woof tutorial</h3>
+            <h3>woof tutorial</h3>
             <video src="./resourses/videos/dog.mp4" controls>
               Video not supported</video>
           </div>
@@ -77,9 +77,13 @@
       </section>
     </main>
     <footer id="contacts" class="footer">
-      <h5>copyright Vladimir Borovikov 2023</h5>
+      <h5>copyright vladimir borovikov 2023</h5>
       <div class="contacts">
-        <h5><a href="https://www.google.com/" target="_blank">Google</a>, <a href="https://stackoverflow.com/" target="_blank">Stackoverflow</a>, <a href="https://developer.mozilla.org/" target="_blank">MDN</a></h5>
+        <h5>
+          <a href="https://www.google.com/" target="_blank">google</a>
+          <a href="https://stackoverflow.com/" target="_blank">stackoverflow</a>
+          <a href="https://developer.mozilla.org/" target="_blank">mdn</a>
+        </h5>
       </div>
     </footer>
   </body>
