--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="mission">
           <div class="mission-txt">
             <h2>be_stacked_love_your_bugs!</h2>
-          <h4>hi all <a href="https://stackoverflow.com/" target="_blank">stackowerflow's</a> friends! our mission is making you stacked more and more day by day! Be part of us!</h4>
+          <h4>hi all <a href="https://stackoverflow.com/" target="_blank">stackoverflow's</a> friends! our mission is to make you more and more stacked, day by day! be a part of our community!</h4>
           </div>
         </div>
       </section>
